--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.8.3",
-    "snowpack": "^3.8.8",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "snowpack": "^3.8.8"
   },
   "_id": "project1vuejs@1.0.0",
   "license": "ISC",
